--- a/requirements.txt
+++ b/requirements.txt
@@ -1,121 +1,10 @@
-absl-py==1.3.0
-asttokens==2.2.1
-astunparse==1.6.3
-backcall==0.2.0
-backports.functools-lru-cache==1.6.4
-beautifulsoup4==4.11.1
-blinker==1.6.3
-cachetools==5.2.0
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.7
-colorama==0.4.6
-contourpy==1.0.6
-cryptography==39.0.1
-cycler==0.11.0
-debugpy==1.5.1
-decorator==5.1.1
-et-xmlfile==1.1.0
-executing==1.2.0
-filelock==3.9.0
-Flask==3.0.0
-flatbuffers==22.12.6
-fonttools==4.38.0
-gast==0.4.0
-google-api-core==2.11.0
-google-auth==2.15.0
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-googleapis-common-protos==1.58.0
-grpcio==1.51.1
-h5py==3.7.0
-httplib2==0.21.0
-idna==3.4
-imageio==2.25.0
-importlib-metadata==6.6.0
-ipykernel==6.15.0
-ipython==8.4.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.2.0
-jupyter_client==8.2.0
-jupyter_core==5.3.0
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.4
-libclang==14.0.6
-Markdown==3.4.1
-MarkupSafe==2.1.1
-matplotlib==3.6.2
-matplotlib-inline==0.1.6
-nest-asyncio==1.5.6
-networkx==3.0
-numpy==1.24.1
-oauthlib==3.2.2
-onedrivedownloader==1.1.3
-opencv-python==4.7.0.68
-openpyxl==3.0.10
-opt-einsum==3.3.0
-packaging==23.1
-pandas==1.5.2
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.4.0
-pip==22.3.1
-pip-chill==1.0.1
-platformdirs==3.5.1
-prompt-toolkit==3.0.38
-protobuf==3.19.6
-psutil==5.9.0
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-Pygments==2.15.1
-PyJWT==2.6.0
-pyparsing==3.0.9
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-slugify==7.0.0
-pytz==2022.7
-PyWavelets==1.4.1
-pywin32==305.1
-pyzmq==25.0.2
-requests==2.28.1
-requests-oauthlib==1.3.1
-rsa==4.9
-scikit-image==0.19.3
-scikit-learn==1.2.0
-scipy==1.10.0
-seaborn==0.12.2
-setuptools==65.5.0
-six==1.16.0
-soupsieve==2.3.2.post1
-stack-data==0.6.2
-tensorboard==2.10.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow-estimator==2.10.0
-tensorflow-gpu==2.10.1
-tensorflow-intel==2.11.0
-tensorflow-io-gcs-filesystem==0.29.0
-termcolor==2.1.1
-text-unidecode==1.3
-threadpoolctl==3.1.0
-tifffile==2023.1.23.1
-tornado==6.2
-tqdm==4.64.1
-traitlets==5.9.0
-typing_extensions==4.5.0
-uritemplate==4.1.1
-urllib3==1.26.13
-wcwidth==0.2.6
-Werkzeug==3.0.1
-wget==3.2
-wheel==0.37.1
-wincertstore==0.2
-wrapt==1.14.1
-zipp==3.15.0
+numpy
+tqdm
+scikit-image
+matplotlib
+scikit-learn
+tensorflow
+flask
+seaborn
+tensorflow
+uvicorn
